--- a/src/root.css
+++ b/src/root.css
@@ -1,39 +1,65 @@
-body {
-  font-family: Gordita, Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+html {
+  box-sizing: border-box;
+  font-size: 14px;
 }
 
-a {
-  margin-right: 1rem;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  font-family: sans-serif;
+  padding: 1rem;
+  line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: 'Fredoka One', cursive;
+  margin-bottom: 1rem;
+}
+
+nav a {
+  text-decoration: none;
 }
 
 main {
-  text-align: center;
-  padding: 1em;
-  margin: 0 auto;
-}
-
-h1 {
-  color: #335d92;
-  text-transform: uppercase;
-  font-size: 4rem;
-  font-weight: 100;
-  line-height: 1.1;
-  margin: 4rem auto;
-  max-width: 14rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 p {
-  max-width: 14rem;
-  margin: 2rem auto;
-  line-height: 1.35;
+  text-align: justify;
+  line-height: 2;
+  margin: 0 0 1rem;
+  max-width: 72ch;
+  width: 100%;
 }
 
-@media (min-width: 480px) {
-  h1 {
-    max-width: none;
-  }
+h1 {
+  font-weight: inherit;
+  margin: 0;
+  text-transform: uppercase;
+}
 
-  p {
-    max-width: none;
+a,
+a:visited {
+  color: currentColor;
+}
+
+@media screen and (min-width: 600px) {
+  html {
+    font-size: 18px;
   }
 }
