--- a/src/components/CarouselSlide.css
+++ b/src/components/CarouselSlide.css
@@ -23,4 +23,9 @@
 
 .carousel-slide-title {
   margin: 1rem 0 0;
+  min-height: 1em;
+}
+
+.carousel-slide-title:empty::before {
+  content: '\00a0\00a0';
 }
