--- a/src/components/CarouselSlide.css
+++ b/src/components/CarouselSlide.css
@@ -16,12 +16,16 @@
 
 .carousel-slide-image {
   width: 100%;
-  height: 100%;
-  background-size: cover;
+  height: calc(100% - 3.25rem);
+  display: block;
+  background-size: contain;
   background-position: center center;
+  background-repeat: no-repeat;
+  object-fit: contain;
 }
 
 .carousel-slide-title {
+  font-size: 1.25rem;
   margin: 1rem 0 0;
   min-height: 1em;
 }
