--- a/src/components/CarouselSlide.css
+++ b/src/components/CarouselSlide.css
@@ -25,6 +25,7 @@
 }
 
 .carousel-slide-title {
+  font-family: 'Fredoka One', cursive;
   font-size: 1.25rem;
   margin: 1rem 0 0;
   min-height: 1em;
