--- a/src/components/CarouselSlide.css
+++ b/src/components/CarouselSlide.css
@@ -2,35 +2,31 @@
   flex: 1;
   flex-shrink: 0;
   position: absolute;
-  justify-content: center;
-  align-items: center;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   display: none;
-  flex-direction: column;
 }
 
 .carousel-slide.is-active {
-  display: flex;
+  display: block;
 }
 
 .carousel-slide-image {
-  width: 100%;
-  height: calc(100% - 3.25rem);
   display: block;
+  height: calc(100% - 3.5rem);
+  width: auto;
+  max-width: 100%;
+  object-fit: contain;
   background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
-  object-fit: contain;
+  margin: 0 auto;
 }
 
 .carousel-slide-title {
   font-family: 'Fredoka One', cursive;
   font-size: 1.25rem;
-  margin: 1rem 0 0;
-  min-height: 1em;
-}
-
-.carousel-slide-title:empty::before {
-  content: '\00a0\00a0';
+  text-align: center;
 }
