--- a/src/components/CarouselSlide.css
+++ b/src/components/CarouselSlide.css
@@ -6,11 +6,13 @@
   left: 0;
   width: 100%;
   height: 100%;
-  display: none;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .carousel-slide.is-active {
-  display: block;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .carousel-slide-image {
