--- a/src/root.css
+++ b/src/root.css
@@ -54,6 +54,12 @@ h1 {
   text-transform: uppercase;
 }
 
+h4 {
+  font-weight: inherit;
+  font-family: 'Fredoka One', cursive;
+  font-size: 1rem;
+}
+
 a,
 a:visited {
   color: currentColor;
@@ -62,5 +68,8 @@ a:visited {
 @media screen and (min-width: 600px) {
   html {
     font-size: 18px;
+  }
+  h4 {
+    font-size: 1.25rem;
   }
 }
