--- a/src/root.css
+++ b/src/root.css
@@ -16,7 +16,7 @@ body {
   line-height: 1.5;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 
