--- a/src/components/LazySlider.css
+++ b/src/components/LazySlider.css
@@ -40,7 +40,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  text-align: center;
   opacity: 0;
   display: flex;
   flex-direction: column;
@@ -48,11 +47,13 @@
   align-items: center;
 }
 
-.slide h4 {
+.lazy-slide-title {
+  font-family: 'Fredoka One', cursive;
+  text-align: center;
   margin: 1rem 0 0;
 }
 
-.slide h4:empty::before {
+.lazy-slide-title:empty::before {
   content: '\00a0';
 }
 
