--- a/src/root.css
+++ b/src/root.css
@@ -1,3 +1,7 @@
+:root {
+  --cooler-font: "Fredoka One", "Arial Rounded MT", sans-apple-system, "Helvetica Neue", sans-serif;
+}
+
 html {
   box-sizing: border-box;
   font-size: 14px;
@@ -11,7 +15,7 @@ html {
 
 body {
   margin: 0;
-  font-family: sans-serif;
+  font-family: sans-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   padding: 1rem;
   line-height: 1.5;
   display: flex;
@@ -24,7 +28,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-family: 'Fredoka One', cursive;
+  font-family: var(--cooler-font);
   width: 100%;
   max-width: 96ch;
   margin: 0 auto 1rem;
